--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="backdrop"></div>
 
-    <div class="section-grid">
+    <div class="section-grid" style="color: white">
       <section class="text grid-1 order-2">
         <h1 class="sodo-sans">Find your adventure</h1>
         <p>
